--- a/app/src/main/res/layout/activity_verified.xml
+++ b/app/src/main/res/layout/activity_verified.xml
@@ -1,65 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".verified">
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/dot_bg"
-        android:layout_marginTop="90dp"
-        android:layout_marginStart="10dp"/>
+        android:layout_alignTop="@+id/ivCircle"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/dot_bg" />
+
     <ImageView
+        android:id="@+id/ivCircle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/circle1_bg"
-        android:layout_marginTop="65dp"
-        android:layout_marginStart="30dp"/>
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="55dp" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_security"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="80dp"/>
+        android:layout_alignStart="@+id/ivCircle"
+        android:layout_alignTop="@+id/ivCircle"
+        android:layout_alignEnd="@+id/ivCircle"
+        android:layout_alignBottom="@+id/ivCircle"
+        android:padding="10dp"
+        android:src="@drawable/ic_security" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/ivCircle"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/tiempos_headline_bold"
         android:text="You are verified."
-        android:textSize="30sp"
         android:textColor="#000000"
-        android:textStyle="bold"
-        android:fontFamily="sans-serif"
-        android:layout_marginTop="150dp"
-        android:layout_marginStart="30dp"/>
+        android:textSize="30sp" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="what next?"
         android:layout_below="@id/textView"
-        android:textSize="30sp"
+        android:layout_alignStart="@+id/textView"
+        android:fontFamily="@font/tiempos_headline_bold"
+        android:text="what next?"
         android:textColor="#000000"
-        android:textStyle="bold"
-        android:fontFamily="sans-serif"
-        android:layout_marginStart="30dp"/>
+        android:textSize="30sp" />
 
     <TextView
+        android:id="@+id/tvcreate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/rectangle_bg"
         android:layout_below="@id/textView"
         android:padding="20dp"
-        android:id="@+id/tvcreate"
         android:layout_marginStart="20dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="150dp"
         android:text="Create account"
         android:textStyle="bold"
         android:textAlignment="center"/>
+
     <TextView
+        android:id="@+id/tvPrefill"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/rectangle_bg"
@@ -70,22 +80,7 @@
         android:layout_marginEnd="150dp"
         android:text="Pre-fill with Facebook"
         android:textStyle="bold"
-        android:textAlignment="center"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:id="@+id/tvcircle"
-        android:layout_marginTop="670dp"
-        android:layout_marginStart="350dp"
-        android:background="@drawable/circle"
-        android:layout_height="wrap_content"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_right_arrow"
-        android:layout_marginStart="365dp"
-        android:layout_marginTop="685dp"/>
-
-
+        android:textAlignment="center" />
 
 
 </RelativeLayout>
